# transL

./: README.md  pyproject.toml
src/transl/: __init__.py  main.py  translate.py
