[project]
name = "transl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "trasta", email = "trasta298@gmail.com" }
]
dependencies = [
    "flet>=0.10.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
