[project]
name = "transl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "trasta", email = "trasta298@gmail.com" }
]
dependencies = [
    "flet>=0.10.3",
    "torch>=2.1.0",
    "transformers>=4.34.0",
    "auto_gptq>=0.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.0.0",
    "pillow>=10.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true
